--- a/dist.ini
+++ b/dist.ini
@@ -1,3 +1,9 @@
+;---------------------------------
+author  = perlancar <perlancar@cpan.org>
+copyright_holder = perlancar <perlancar@cpan.org>
+license = Perl_5
+;---------------------------------
+
 version=0.003
 
 name=Acme-CPANModules-PortedFrom-NPM
@@ -5,7 +11,7 @@ name=Acme-CPANModules-PortedFrom-NPM
 [Acme::CPANModules]
 
 [@Author::PERLANCAR]
-:version=0.603
+:version=0.605
 
 [Prereqs]
 
@@ -13,4 +19,3 @@ name=Acme-CPANModules-PortedFrom-NPM
 -phase=develop
 -relationship=x_spec
 Acme::CPANModules=0.1.7
-
