--- a/dist.ini
+++ b/dist.ini
@@ -4,16 +4,17 @@ copyright_holder = perlancar <perlancar@cpan.org>
 license = Perl_5
 ;---------------------------------
 
-version=0.004
+version=0.005
 
 name=Acme-CPANModules-PortedFrom-NPM
 
 [Acme::CPANModules]
 
 [@Author::PERLANCAR]
-:version=0.605
+:version=0.608
 
 [Prereqs]
+strict=0
 
 [Prereqs / DevelopX_spec]
 -phase=develop
